--- a/src/style.css
+++ b/src/style.css
@@ -151,12 +151,48 @@ margin-left:50px;
 {
     background-color: #2771a2;
 	width: 600px;
-	height:400px ;
+	height:320px ;
     margin:50px;
-    margin-top:80px;
+    margin-top:120px;
 }
 .text
 { 
     text-align: justify;
     margin:20px;
+    font-family: 'Josefin Sans', sans-serif;
+}
+.galerie
+{
+    width:900px;
+    display: flex;
+    overflow-x: scroll;
+}
+.galerie div
+{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 20px;
+    padding: 10px;
+    flex: none;
+}
+.galerie div img
+{
+    width: 100%;
+}
+.galerie::-webkit-scrollbar
+{
+    display: none;
+}
+.galerie-completa
+{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+   
+}
+.imgbuton
+{
+    width: 100px;
+    cursor: pointer;
 }
